--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,7 +1,92 @@
+/* desktop*/
+
 .header-desktop {
   display: none;
 }
 
 .header-mobile {
   display: block;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+body {
+  position: relative;
+}
+
+.desktop {
+  display: none;
+}
+
+.mobile {
+  display: block;
+}
+
+/* header */
+
+.header-mobile {
+  position: absolute;
+  display: flex;
+  margin-left: 6%;
+  padding-top: 50px;
+  gap: 110px;
+}
+
+/* article top */
+
+.article-top {
+  display: grid;
+  grid-template-columns: none;
+  grid-template-rows: 360px 410px;
+}
+
+.article-top-content {
+  padding: 0 6%;
+}
+
+.article-top-img img {
+  width: 100%;
+  height: 360px;
+  object-fit: none;
+}
+
+.slide-btns {
+  height: 55px;
+  width: 110px;
+  gap: unset;
+  top: -55px;
+  right: 0;
+  left: unset;
+}
+
+.article-top-content h1 {
+  font-size: 26px;
+}
+
+.slide-btns button {
+  width: 55px;
+  height: 55px;
+  padding: 0 21.5px;
+}
+
+.slide-btns img {
+  width: 12px;
+}
+
+/* article bottom */
+
+.article-bottom {
+  grid-template-columns: none;
+  grid-template-rows: 240px 300px 240px;
+}
+
+.a-b-text {
+  padding: 0 6%;
+}
+
+.a-b-text p {
+  font-size: 12.4px;
 }
