--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
   display: none;
 }
 
-.mobile-nav {
+.mobile-nav-bar {
   display: none;
 }
 
@@ -64,6 +64,27 @@ main {
 }
 
 .header-nav-link {
+  position: relative;
+}
+
+.header-nav-link::before {
+  content: "";
+  width: 50%;
+  display: block;
+  border-bottom: 2.5px solid white;
+  margin: auto;
+  position: absolute;
+  left: 25%;
+  top: 25px;
+  transition: 0.3s ease 0s;
+  transform: scaleX(0);
+}
+
+.header-nav-link:hover::before {
+  transform: scaleX(1);
+}
+
+.header-nav-links a {
   list-style: none;
   text-decoration: none;
   color: white;
@@ -96,17 +117,22 @@ main {
   height: 80px;
   left: 0;
   bottom: 0;
-  background: hsl(0, 0%, 0%);
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 45px;
 }
 
 .slide-btns button {
   background: none;
   border: none;
-  padding: 10px;
+  background: hsl(0, 0%, 0%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 80px;
+}
+
+.slide-btns button:hover {
+  background: hsl(0, 0%, 27%);
 }
 
 .article-top-content {
@@ -140,6 +166,10 @@ main {
   display: flex;
   justify-content: space-between;
   letter-spacing: 10px;
+}
+
+.article-top-btn:hover {
+  color: hsl(0, 0%, 63%);
 }
 
 /* article bottom */
